[package]
name = "wallsplash"
version = "0.1.0"
authors = ["Yufeng Wang <yufengwang05@gmail.com>"]

[[bin]]
name = "wallsplash"
path = "src/main.rs"

[lib]
name = "wallsplash"
path = "src/lib.rs"

[dependencies]
clap = "2.26.0"
env_logger = "0.4"
log = "0.3"
reqwest = "0.6"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4.6"
